// n3msg.proto

// 
// generate with following command run in this folder: 
// 
// you need to have downloaded grpc & protoc compiler/packages for your 
// OS.
// 
// protoc -I . n3msg.proto --go_out=plugins=grpc:.
// 
// remember to do this any time fields are added or modified
// or changes to the grpc api

syntax = "proto3";

package pb;

// core message type for lowest-level data tuples
message SPOTuple {
	string Subject = 1; 	//e.g. Refid of a SIF object
	string Predicate = 2; 	//e.g. Attribute name of a SIF object
	string Object = 3; 		//e.g Value of an attribute
	int64  Version = 4; 	//latest known version of this tuple
}

message N3Message {
	bytes  Payload = 1;
	string SndId = 2;
	string NameSpace = 3;
	string CtxName = 4;
	string DispId = 5;
}

message TxSummary {
	int64 MsgCount = 1; 
}

service API {
	rpc Publish(stream N3Message) returns (TxSummary) {}
}

